|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-02-12 Malte Geierhos
	- SETUP:
		* changed set-gui-permissions to match our new webmailer
		* fixed bug #72 (permissions on new domain - folders are wrong created)

2007-02-12 Malte Geierhos / Henrik Schytte
	- GUI:
		* added Squirrelmail as new Webmailer
		* added Omega Original Theme for Squirrelmail
		* added functions for the second menu (to split the menu)
		* changed default theme to omega_original
		* added new phpmyadmin

2007-02-12 Henrik Schytte
	- GUI:
		* added Omega Original Theme to the gui
		* changed error - documents to match omega-original
		* added omega theme to phpmyadmin

2007-02-12 Laurent DECLERCQ
	- CONFIGS:
		* Edited "als_entry.tpl", "dmn_entry.tpl", "sub_entry.tpl" and "vhcs2_base.tpl" for FastCGI
		* Edited  "httpd.conf" for FastCGI
		* Edited "fastcgi.conf" for FastCGI (Not finish)
		* Fixe paths in fcgi templates
		* Added new cfg variables in "vhcs2.conf" for PHP Fastcgi BIN
	- ENGINE:
		* Edited vhcs2-dmn-mngr for Fastcgi :
			- Added instructions for create "php4" and "php5" directory for usual users
			- Changed "php.ini" files name for usual users
		* Fixed bug #62
	- SETUP:
		* - added "a2dissite 000-default" for disabled the default site (If not, FastCGI is not working)

2007-02-12 Benedikt Heintel
	- CONFIGS:
		* added folder and files for Gentoo
		* added/changed Fedora files
		* added/changed OpenBSD files
		* changed masters php.inis
		* changed main theme
		* fixed errors with new PHPSysInfo in master's php.ini
		* fixed error in vhcs2.conf
	- DOCS:
		* added folder for Gentoo
	- ENGINE:
		* change php4.ini / php5.ini
			=> Create "php4" and "php5" directory for all users