@@ -11,6 +11,11 @@ VHCS 2.4.8 ω Omega Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-02-13 Laurent DECLERCQ
+	- SETUP:
+		* Changed set-gui-permissions (chmod 440 --> 440) If not, usual user do not access VHCS
+		* Fixed error -> No input file specified for usual user
+
 2007-02-12 Malte Geierhos
 	- SETUP:
 		* changed set-gui-permissions to match our new webmailer
